added webpack to the project and changed the bundle for the webpack one

--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,7 @@
 	<section id='companies-list' class='companies-list'></section>
 	<div id='remove-confirmation-dest'></div>
 	<script src="/bower/jquery/dist/jquery.min.js"></script>
-	<script type="text/javascript" src='js/build/bundle.js'></script>
+	<script type="text/javascript" src='js/build/app.bundle.js'></script>
 </body>
 </html>
 
